[package]
name = "online-python"
version = "0.1.0"
authors = ["sebasv <mail@sebastiaanvermeulen.nl>"]

[lib]
name = "online_python"
crate-type = ["cdylib"]


[dependencies]
numpy = "0.4.0"
pyo3 = {version = "0.5.2", features = ["extension-module"]}
ndarray = {version = "0.12", features=["blas"]}
# sudo apt install openblas-base openblas-dev
ndarray-linalg = {version = "0.10", default-features=false, features = ["openblas"]}
# blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
# openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
online-python-src = {path="online-python-src"}

[dev-dependencies]
rand = "0.6"

[profile]
opt-level = 3